--- a/index.html
+++ b/index.html
@@ -2,88 +2,103 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>👑 مملكة علوش | الإصدار المستقر</title>
+    <title>👑 مملكة علوش | الإصدار الذهبي</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <style>
         :root { --gold: #d4af37; }
-        body { margin: 0; font-family: sans-serif; background: #000 url('https://images.unsplash.com/photo-1518709268805-4e9042af9f23?q=80&w=1920') no-repeat center center fixed; background-size: cover; color: white; height: 100vh; display: flex; flex-direction: column; overflow: hidden; }
-        #overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.6); z-index: -1; }
-        header { background: rgba(0,0,0,0.9); padding: 10px; display: flex; justify-content: space-between; align-items: center; border-bottom: 2px solid var(--gold); }
-        .nav-btn { background: #111; border: 1px solid var(--gold); color: var(--gold); padding: 5px 10px; border-radius: 5px; cursor: pointer; }
-        #wrapper { flex: 1; display: flex; position: relative; overflow: hidden; }
-        #messages { flex: 1; overflow-y: auto; padding: 20px; background: rgba(0,0,0,0.3); backdrop-filter: blur(5px); }
-        .line { border-bottom: 1px solid rgba(255,255,255,0.1); padding: 8px 0; word-wrap: break-word; }
-        .sidebar { position: absolute; top: 0; width: 250px; height: 100%; background: #000; transition: 0.3s; z-index: 1001; border: 1px solid #333; }
-        #color-panel { right: -260px; } #admin-panel { right: -260px; top: 50px; height: auto; }
-        .open { right: 0 !important; }
-        #emoji-box { position: absolute; bottom: 70px; right: 10px; width: 280px; height: 250px; background: #111; border: 2px solid var(--gold); display: none; flex-direction: column; z-index: 2000; border-radius: 10px; }
-        .emoji-scroll { overflow-y: auto; display: grid; grid-template-columns: repeat(5, 1fr); padding: 10px; gap: 5px; }
-        footer { padding: 10px; background: #000; border-top: 1px solid var(--gold); display: flex; gap: 5px; align-items: center; }
-        #msg-in { flex: 1; padding: 10px; border-radius: 5px; border: 1px solid #444; background: #111; color: #fff; }
-        /* تأثيرات */
-        .fire { color: #ff4500; font-weight: bold; text-shadow: 0 0 8px #f00; }
-        .gold-flow { color: var(--gold); font-weight: bold; text-shadow: 0 0 8px #fff; }
+        body { 
+            margin: 0; font-family: 'Segoe UI', sans-serif; 
+            background: #000 url('https://images.unsplash.com/photo-1518709268805-4e9042af9f23?q=80&w=1920') no-repeat center center fixed; 
+            background-size: cover; color: white; height: 100vh; display: flex; flex-direction: column; overflow: hidden; 
+        }
+        #overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5); z-index: -1; }
+
+        header { background: rgba(15, 15, 15, 0.95); padding: 12px 20px; display: flex; justify-content: space-between; align-items: center; border-bottom: 2px solid var(--gold); }
+        .nav-btn { background: #222; border: 1px solid var(--gold); color: var(--gold); padding: 8px 15px; border-radius: 8px; cursor: pointer; font-weight: bold; }
+
+        #wrapper { display: flex; flex: 1; position: relative; overflow: hidden; }
+        .sidebar { position: absolute; top: 0; width: 280px; height: 100%; background: rgba(10, 10, 10, 0.98); transition: 0.4s ease; z-index: 1001; border: 1px solid #333; }
+        .open-right { right: 0 !important; }
+        #admin-panel { right: -300px; border-left: 2px solid red; } 
+        #color-panel { right: -300px; border-left: 2px solid var(--gold); } 
+
+        #messages { flex: 1; overflow-y: auto; padding: 25px; background: rgba(0,0,0,0.3); backdrop-filter: blur(8px); }
+        .line { border-bottom: 1px solid rgba(255,255,255,0.05); padding: 10px 0; font-size: 16px; }
+
+        /* تأثيرات الخطوط */
+        .fire { color: #ff4500; font-weight: bold; text-shadow: 0 0 10px #f00; animation: f 1s infinite alternate; }
+        .gold-flow { color: var(--gold); font-weight: bold; text-shadow: 0 0 10px #fff; animation: g 2s linear infinite; }
+        @keyframes f { from { text-shadow: 0 0 5px #ff0; } to { text-shadow: 0 0 15px #f00; } }
+
+        #emoji-box { position: absolute; bottom: 85px; right: 20px; width: 300px; height: 250px; background: #111; border: 2px solid var(--gold); display: none; flex-direction: column; z-index: 2000; border-radius: 15px; overflow-y: auto; }
+        .emoji-grid { display: grid; grid-template-columns: repeat(5, 1fr); padding: 10px; gap: 10px; }
+        .emoji-item { cursor: pointer; font-size: 25px; text-align: center; }
+
+        footer { padding: 15px; background: rgba(15, 15, 15, 0.95); border-top: 1px solid var(--gold); display: flex; gap: 10px; }
+        #msg-in { flex: 1; padding: 12px; border-radius: 20px; border: 1px solid #444; background: #000; color: #fff; outline: none; }
     </style>
 </head>
-<body>
+<body onload="startKingdom()">
     <div id="overlay"></div>
     <header>
         <button class="nav-btn" onclick="toggleSide('admin-panel')">⚙️ الإدارة</button>
-        <div style="color: var(--gold); font-weight: bold;">👑 مـمـلـكـة عـلـوش</div>
-        <button class="nav-btn" onclick="toggleSide('color-panel')">🎨 الصبغ</button>
+        <div style="font-weight: bold; color: var(--gold); font-size: 20px;">👑 مـمـلـكـة عـلـوش</div>
+        <button class="nav-btn" onclick="toggleSide('color-panel')">🎨 الصبغ والاسم</button>
     </header>
 
     <div id="wrapper">
         <div id="admin-panel" class="sidebar">
-            <div style="padding:15px;">
-                <button class="nav-btn" onclick="viewLogs()" style="width:100%">👁️ سجل الزوار</button><br><br>
+            <div style="padding:20px;">
+                <h3>⚙️ التحكم</h3>
+                <button class="nav-btn" onclick="viewLogs()" style="width:100%">👁️ منو دخل؟</button><br><br>
                 <button class="nav-btn" onclick="clearDB()" style="width:100%; color:red;">🧹 مسح الشات</button>
             </div>
         </div>
+        
         <div id="color-panel" class="sidebar">
-            <div style="padding:15px;">
-                <label>النك:</label>
-                <input type="text" id="my-name" value="علوش" style="width:90%; margin-bottom:10px;"><br>
-                <label>التأثير:</label>
-                <select id="f-anim" onchange="updateS()" style="width:100%">
-                    <option value="">عادي</option>
-                    <option value="fire">🔥 نار</option>
-                    <option value="gold-flow">💰 ذهب</option>
+            <div style="padding:20px;">
+                <h3>👤 حسابك</h3>
+                <input type="text" id="my-name" value="علوش" style="width:90%; padding:8px; background:#000; color:var(--gold); border:1px solid var(--gold);">
+                <hr>
+                <select id="f-anim" onchange="updateStyle()" style="width:100%; padding:8px; background:#000; color:#fff;">
+                    <option value="">خط عادي</option>
+                    <option value="fire">🔥 خط النار</option>
+                    <option value="gold-flow">💰 الذهب</option>
                 </select><br><br>
-                <input type="color" id="f-color" value="#ffffff" onchange="updateS()" style="width:100%">
+                <input type="color" id="f-color" value="#ffffff" onchange="updateStyle()" style="width:100%; height:40px;">
             </div>
         </div>
+
         <div id="messages"></div>
-        <div id="emoji-box"><div class="emoji-scroll" id="emoji-list"></div></div>
+        <div id="emoji-box"><div class="emoji-grid" id="emoji-list"></div></div>
     </div>
 
     <footer>
         <button class="nav-btn" onclick="toggleEmoji()">😊</button>
-        <input type="text" id="msg-in" placeholder="اكتب هنا...">
-        <button class="nav-btn" onclick="sendMsg()" style="background:var(--gold); color:#000;">إرسال</button>
+        <input type="text" id="msg-in" placeholder="أصدر مرسومك يا ملك...">
+        <button class="nav-btn" onclick="sendMsg()" style="background:var(--gold); color:#000; padding:10px 25px;">إرسال</button>
     </footer>
 
     <script>
-        // املأ بيانات الفايربيس الخاصة بك هنا
-        const firebaseConfig = { databaseURL: "https://alloush-kingdom-default-rtdb.firebaseio.com" };
-        firebase.initializeApp(firebaseConfig);
+        // تكوين قاعدة البيانات
+        const config = { databaseURL: "https://alloush-kingdom-default-rtdb.firebaseio.com" };
+        firebase.initializeApp(config);
         const db = firebase.database();
         let myStyle = { c: '#ffffff', a: '' };
 
-        function updateS() { 
-            myStyle.c = document.getElementById('f-color').value; 
-            myStyle.a = document.getElementById('f-anim').value; 
+        function updateStyle() {
+            myStyle.c = document.getElementById('f-color').value;
+            myStyle.a = document.getElementById('f-anim').value;
         }
 
-        function toggleSide(id) { document.getElementById(id).classList.toggle('open'); }
+        function toggleSide(id) { document.getElementById(id).classList.toggle('open-right'); }
         function toggleEmoji() { 
-            const b = document.getElementById('emoji-box');
-            b.style.display = (b.style.display === 'flex') ? 'none' : 'flex'; 
+            const box = document.getElementById('emoji-box');
+            box.style.display = (box.style.display === 'flex') ? 'none' : 'flex'; 
         }
 
-        // إرسال رسالة
+        // نظام الرسائل
         function sendMsg() {
             const inp = document.getElementById('msg-in');
             const name = document.getElementById('my-name').value;
@@ -95,45 +110,40 @@
             }
         }
 
-        // استقبال الرسائل
-        db.ref("messages").limitToLast(30).on("child_added", (snap) => {
+        db.ref("messages").limitToLast(50).on("child_added", (snap) => {
             const d = snap.val();
             const div = document.createElement('div');
             div.className = 'line';
-            div.innerHTML = `<b style="color:var(--gold)">${d.u}:</b> <span class="${d.s.a}" style="color:${d.s.c}">${d.t}</span>`;
+            div.innerHTML = `<b style="color:var(--gold)">${d.u}:</b> <span class="${d.s.a}" style="color:${d.s.c}">${d.t}</span> <small style="float:left; opacity:0.2">${d.time}</small>`;
             const box = document.getElementById('messages');
             box.appendChild(div);
             box.scrollTop = box.scrollHeight;
         });
 
-        // تعقب الزوار
-        function track() {
+        // نظام التعقب
+        function startKingdom() {
             const name = document.getElementById('my-name').value;
             db.ref("activity_log").push().set({ user: name, time: new Date().toLocaleString() });
-        }
-
-        function viewLogs() {
-            db.ref("activity_log").limitToLast(5).once("value", (s) => {
-                let res = "سجل الدخول:\n";
-                s.forEach(c => { res += c.val().user + " - " + c.val().time + "\n"; });
-                alert(res);
+            // تحميل إيموجيات
+            const list = document.getElementById('emoji-list');
+            const ems = ["😂","😍","🔥","👑","💎","❤️","✨","⚔️","🛡️","🦁","🌟","👍"];
+            ems.forEach(e => {
+                let s = document.createElement('span'); s.className='emoji-item'; s.innerText=e;
+                s.onclick = () => { document.getElementById('msg-in').value += e; };
+                list.appendChild(s);
             });
         }
 
-        // توليد الإيموجيات
-        const eList = document.getElementById('emoji-list');
-        const emojis = ["😂","😍","🔥","👑","💎","❤️","✨","👍","✔️","⚔️","🛡️","🦁"];
-        emojis.forEach(e => {
-            let span = document.createElement('span');
-            span.innerText = e; span.style.cursor="pointer"; span.style.fontSize="25px";
-            span.onclick = () => { document.getElementById('msg-in').value += e; };
-            eList.appendChild(span);
-        });
+        function viewLogs() {
+            db.ref("activity_log").limitToLast(10).once("value", (s) => {
+                let txt = "📜 سجل الزوار:\n";
+                s.forEach(c => { txt += `👤 ${c.val().user} - ${c.val().time}\n`; });
+                alert(txt);
+            });
+        }
 
-        function clearDB() { if(confirm("مسح؟")) db.ref("messages").remove(); location.reload(); }
+        function clearDB() { if(confirm("تصفير الشات؟")) db.ref("messages").remove(); location.reload(); }
         document.getElementById('msg-in').onkeypress = (e) => { if(e.key==='Enter') sendMsg(); };
-        
-        window.onload = track;
     </script>
 </body>
 </html>
