--- a/index.html
+++ b/index.html
@@ -1,26 +1,38 @@
 function initKingdom() {
     const name = document.getElementById('my-name').value;
     db.ref("activity_log").push().set({ user: name, time: new Date().toLocaleString('ar-EG') });
-    
-    // --- محرك الإيموجيات العملاق (الآلاف المؤلفة) ---
+
     const eList = document.getElementById('emoji-list');
-    
-    // نطاقات الإيموجيات العالمية (وجوه، حيوانات، طعام، رياضة، رموز، أعلام)
+    eList.innerHTML = ""; // تنظيف القائمة قبل التحميل
+
+    // 1. إضافة الملصقات الملونة (تشبه ملصقات يوتيوب)
+    const stickers = ["👑", "🔥", "💎", "🛡️", "⚔️", "🌟", "🚀", "🦁", "💰", "✨", "🎁", "🧿"];
+    stickers.forEach(stk => {
+        let s = document.createElement('span');
+        s.className = 'emoji-item';
+        s.style.fontSize = "35px"; // تكبير الملصقات المميزة
+        s.style.filter = "drop-shadow(0 0 5px gold)"; // إضافة لمعة ملكية
+        s.innerText = stk;
+        s.onclick = () => { document.getElementById('msg-in').value += stk; };
+        eList.appendChild(s);
+    });
+
+    // 2. إضافة آلاف الإيموجيات العالمية (النطاقات الشاملة)
     const ranges = [
-        [0x1F600, 0x1F64F], // الوجوه (Smileys)
-        [0x1F680, 0x1F6C5], // المواصلات (Transport)
-        [0x1F300, 0x1F5FF], // أشياء ورموز (Misc Symbols)
-        [0x1F900, 0x1F9FF], // إضافات حديثة (Supplemental)
-        [0x2600, 0x26FF],   // رموز منوعة (Signs)
-        [0x1F1E6, 0x1F1FF]  // الأعلام (Flags)
+        [0x1F600, 0x1F64F], // الوجوه الضاحكة
+        [0x1F300, 0x1F5FF], // الرموز والأشياء
+        [0x1F680, 0x1F6FF], // المواصلات والخرائط
+        [0x1F900, 0x1F9FF], // الإيموجيات الحديثة
+        [0x2600, 0x26FF],   // علامات منوعة
+        [0x1F1E6, 0x1F1FF]  // الأعلام العالمية
     ];
 
     ranges.forEach(range => {
-        for(let i = range[0]; i <= range[1]; i++) {
+        for (let i = range[0]; i <= range[1]; i++) {
             let s = document.createElement('span');
             s.className = 'emoji-item';
-            s.innerText = String.fromCodePoint(i);
-            s.onclick = () => { document.getElementById('msg-in').value += s.innerText; };
+            s.innerText = String.fromCodePoint(i); // تحويل الكود إلى إيموجي
+            s.onclick = () => { document.getElementById('msg-in').value += s.innerText; }; // إضافة للنص عند الضغط
             eList.appendChild(s);
         }
     });
