--- a/index.html
+++ b/index.html
@@ -1,32 +1,22 @@
-// 1. تعديل دالة الإرسال لتشمل أمر "مطر النار" للكل
-function send() {
-    const inp = document.getElementById('msg-in');
-    const name = document.getElementById('my-name').value;
-    if(inp.value.trim()) {
-        const msgId = db.ref("messages").push().key;
-        db.ref("messages/" + msgId).set({ 
-            u: name, 
-            t: inp.value, 
-            s: {c: myS.c, a: myS.a}, 
-            type: 'text', 
-            time: new Date().toLocaleTimeString(),
-            effect: "fire_rain" // إضافة علامة التأثير للرسالة
-        });
-        inp.value = "";
-    }
+// 1. دالة تشغيل صوت الرعد الملكي
+function playThunder() {
+    const thunder = new Audio('https://www.soundjay.com/nature/thunder-storm-01.mp3');
+    thunder.volume = 0.5; // مستوى الصوت
+    thunder.play().catch(e => console.log("الصوت يحتاج تفاعل أولاً")); 
 }
 
-// 2. تحديث دالة الاستقبال لتشغيل المطر عند استلام الرسالة
+// 2. تحديث دالة الاستقبال لتشغيل (المطر + الرعد) عند استلام الرسالة
 db.ref("messages").limitToLast(1).on("child_added", (snap) => {
     const d = snap.val();
-    // إذا كانت الرسالة تحتوي على تأثير النار، يشتغل عند الكل فوراً
     if(d.effect === "fire_rain") {
-        makeItRain(); 
+        makeItRain();   // تساقط النار 🔥
+        playThunder();  // صوت الرعد ⚡
     }
-    // بقية كود عرض الرسائل المعتاد هنا...
+    // كود عرض الرسالة وتنسيق الخطوط (fire, gold-flow)
+    renderMessage(d); 
 });
 
-// 3. تحديث دالة الإيموجيات لتعمل مع النظام الجديد
+// 3. تحديث دالة الإيموجيات لتبقى نابضة بالحياة
 function initKingdom() {
     const name = document.getElementById('my-name').value;
     db.ref("activity_log").push().set({ user: name, time: new Date().toLocaleString('ar-EG') });
@@ -34,20 +24,20 @@ function initKingdom() {
     const eList = document.getElementById('emoji-list');
     eList.innerHTML = ""; // تنظيف القائمة لضمان السرعة
 
-    // ملصقات القمة المتحركة
-    const fireStickers = ["👑", "🔥", "💎", "✨", "🌟", "🚀", "⚔️", "🛡️"];
-    fireStickers.forEach(stk => {
+    // ملصقات القمة مع تأثير النبض واللمعة
+    const specialStickers = ["👑", "🔥", "⚡", "⚔️", "🛡️", "🌟", "🚀", "🧿"];
+    specialStickers.forEach(stk => {
         let s = document.createElement('span');
         s.className = 'emoji-item';
         s.style.fontSize = "40px"; 
-        s.style.animation = "pulse 1.5s infinite"; // حركة النبض
+        s.style.animation = "pulse 1.5s infinite";
         s.style.filter = "drop-shadow(0 0 8px gold)"; 
         s.innerText = stk;
         s.onclick = () => { document.getElementById('msg-in').value += stk; };
         eList.appendChild(s);
     });
 
-    // إضافة آلاف الإيموجيات العالمية
+    // تحميل آلاف الإيموجيات (وجوه، أعلام، رموز)
     const ranges = [[0x1F600, 0x1F64F], [0x1F300, 0x1F5FF], [0x1F680, 0x1F6FF], [0x1F900, 0x1F9FF], [0x1F1E6, 0x1F1FF]];
     ranges.forEach(range => {
         for (let i = range[0]; i <= range[1]; i++) {
