--- a/index.html
+++ b/index.html
@@ -1,51 +1,19 @@
-// 1. دالة تشغيل صوت الرعد الملكي
-function playThunder() {
-    const thunder = new Audio('https://www.soundjay.com/nature/thunder-storm-01.mp3');
-    thunder.volume = 0.5; // مستوى الصوت
-    thunder.play().catch(e => console.log("الصوت يحتاج تفاعل أولاً")); 
+/* تأثير اهتزاز الشاشة الملكي */
+@keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
 }
 
-// 2. تحديث دالة الاستقبال لتشغيل (المطر + الرعد) عند استلام الرسالة
-db.ref("messages").limitToLast(1).on("child_added", (snap) => {
-    const d = snap.val();
-    if(d.effect === "fire_rain") {
-        makeItRain();   // تساقط النار 🔥
-        playThunder();  // صوت الرعد ⚡
-    }
-    // كود عرض الرسالة وتنسيق الخطوط (fire, gold-flow)
-    renderMessage(d); 
-});
-
-// 3. تحديث دالة الإيموجيات لتبقى نابضة بالحياة
-function initKingdom() {
-    const name = document.getElementById('my-name').value;
-    db.ref("activity_log").push().set({ user: name, time: new Date().toLocaleString('ar-EG') });
-    
-    const eList = document.getElementById('emoji-list');
-    eList.innerHTML = ""; // تنظيف القائمة لضمان السرعة
-
-    // ملصقات القمة مع تأثير النبض واللمعة
-    const specialStickers = ["👑", "🔥", "⚡", "⚔️", "🛡️", "🌟", "🚀", "🧿"];
-    specialStickers.forEach(stk => {
-        let s = document.createElement('span');
-        s.className = 'emoji-item';
-        s.style.fontSize = "40px"; 
-        s.style.animation = "pulse 1.5s infinite";
-        s.style.filter = "drop-shadow(0 0 8px gold)"; 
-        s.innerText = stk;
-        s.onclick = () => { document.getElementById('msg-in').value += stk; };
-        eList.appendChild(s);
-    });
-
-    // تحميل آلاف الإيموجيات (وجوه، أعلام، رموز)
-    const ranges = [[0x1F600, 0x1F64F], [0x1F300, 0x1F5FF], [0x1F680, 0x1F6FF], [0x1F900, 0x1F9FF], [0x1F1E6, 0x1F1FF]];
-    ranges.forEach(range => {
-        for (let i = range[0]; i <= range[1]; i++) {
-            let s = document.createElement('span');
-            s.className = 'emoji-item';
-            s.innerText = String.fromCodePoint(i);
-            s.onclick = () => { document.getElementById('msg-in').value += s.innerText; };
-            eList.appendChild(s);
-        }
-    });
+.shake-active {
+    animation: shake 0.5s; 
+    animation-iteration-count: 2; /* يهتز مرتين مع الرعد */
 }
