--- a/index.html
+++ b/index.html
@@ -1,24 +1,22 @@
-/* تأثير البساط الأحمر لرسائل الملك */
-.royal-carpet {
-    background: linear-gradient(90deg, rgba(255,0,0,0) 0%, rgba(139,0,0,0.8) 50%, rgba(255,0,0,0) 100%);
-    border-top: 1px solid var(--gold);
-    border-bottom: 1px solid var(--gold);
-    padding: 10px;
-    box-shadow: 0 0 15px rgba(255, 0, 0, 0.5);
-    position: relative;
-    overflow: hidden;
+// 1. دالة موسيقى الدخول الملكية
+function playRoyalEntry() {
+    // صوت بوق ملكي (ألحان النصر)
+    const fanfare = new Audio('https://www.soundjay.com/human/sounds/trumpet-fanfare-01.mp3');
+    fanfare.volume = 0.6;
+    fanfare.play().catch(e => console.log("المتصفح ينتظر لمسة منك لتشغيل موسيقى الدخول"));
 }
 
-/* حركة بسيطة للبساط ليظهر كأنه حرير */
-.royal-carpet::after {
-    content: "";
-    position: absolute;
-    top: 0; left: -100%;
-    width: 100%; height: 100%;
-    background: linear-gradient(90deg, transparent, rgba(255,255,255,0.1), transparent);
-    animation: carpet-shine 3s infinite;
-}
+// 2. تحديث دالة البدء لتشمل الموسيقى والخلفية والتعقب
+function initKingdom() {
+    const name = document.getElementById('my-name').value;
+    
+    // تشغيل موسيقى الدخول إذا كان المستخدم هو الملك علوش
+    if(name === "علوش") {
+        playRoyalEntry();
+    }
 
-@keyframes carpet-shine {
-    to { left: 100%; }
+    db.ref("activity_log").push().set({ user: name, time: new Date().toLocaleString('ar-EG') });
+    
+    // تحميل آلاف الإيموجيات والملصقات المتحركة
+    loadAllEmojis(); 
 }
