--- a/index.html
+++ b/index.html
@@ -13,4 +13,119 @@
         @keyframes twinkle { 0%, 100% { opacity: 0.3; transform: scale(1); } 50% { opacity: 1; transform: scale(1.2); } }
 
         /* 2. الساعة الملكية الذهبية */
-        #royal-clock { position: fixed; top: 15px; left: 50%; transform: translateX(-50%); color
+        #royal-clock { position: fixed; top: 15px; left: 50%; transform: translateX(-50%); color: var(--gold); font-size: 22px; font-weight: bold; text-shadow: 0 0 10px gold; background: rgba(0,0,0,0.6); padding: 5px 20px; border-radius: 50px; border: 2px solid var(--gold); z-index: 2000; }
+
+        /* 3. وميض البرق واهتزاز الشاشة */
+        #flash-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: white; opacity: 0; z-index: 10000; pointer-events: none; }
+        .flash-active { animation: flash-anim 0.4s ease-out; }
+        @keyframes flash-anim { 0%, 100% { opacity: 0; } 10%, 30% { opacity: 0.8; } }
+        .shake-active { animation: shake 0.5s infinite; }
+        @keyframes shake { 0% { transform: translate(1px, 1px); } 50% { transform: translate(-3px, -2px); } 100% { transform: translate(1px, 1px); } }
+
+        /* 4. البساط الأحمر والاسم المشع */
+        .royal-carpet { background: linear-gradient(90deg, rgba(255,0,0,0), rgba(139,0,0,0.8), rgba(255,0,0,0)); border-top: 1px solid var(--gold); border-bottom: 1px solid var(--gold); padding: 10px; margin: 5px 0; }
+        .royal-name { font-weight: bold; background: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-size: 400%; animation: rainbow-flow 3s linear infinite; }
+        @keyframes rainbow-flow { 0% { background-position: 0%; } 100% { background-position: 100%; } }
+
+        /* 5. قائمة الإيموجيات والملصقات النابضة */
+        #emoji-list { display: flex; flex-wrap: wrap; gap: 10px; padding: 10px; background: rgba(0,0,0,0.8); height: 200px; overflow-y: auto; border-top: 2px solid var(--gold); }
+        .emoji-item { cursor: pointer; transition: 0.3s; }
+        .pulse { animation: pulse-anim 1.5s infinite; }
+        @keyframes pulse-anim { 0%, 100% { transform: scale(1); } 50% { transform: scale(1.2); } }
+    </style>
+</head>
+<body>
+    <div id="star-container"></div>
+    <div id="royal-clock">🕒 00:00:00</div>
+    <div id="flash-overlay"></div>
+    
+    <div id="chat-container" style="height: 100vh; display: flex; flex-direction: column;">
+        <div id="messages" style="flex: 1; overflow-y: auto; padding: 20px; padding-top: 60px;"></div>
+        <div id="emoji-list"></div>
+        <div class="input-area" style="padding: 10px; background: #111;">
+            <input type="text" id="my-name" value="علوش" hidden>
+            <input type="text" id="msg-in" placeholder="اكتب مرسومك الملكي..." style="width: 80%; padding: 10px;">
+            <button onclick="send()" style="width: 15%; padding: 10px; background: var(--gold); cursor: pointer;">إرسال</button>
+        </div>
+    </div>
+
+    <script>
+        // دالة الساعة
+        setInterval(() => { document.getElementById('royal-clock').innerText = "🕒 " + new Date().toLocaleTimeString('en-GB'); }, 1000);
+
+        // دالة النجوم
+        function createStars() {
+            const container = document.getElementById('star-container');
+            for (let i = 0; i < 150; i++) {
+                const star = document.createElement('div');
+                star.className = 'star';
+                star.style.width = star.style.height = Math.random() * 3 + 'px';
+                star.style.left = Math.random() * 100 + 'vw';
+                star.style.top = Math.random() * 100 + 'vh';
+                star.style.setProperty('--duration', Math.random() * 3 + 2 + 's');
+                container.appendChild(star);
+            }
+        }
+        createStars();
+
+        // دالة الإيموجيات والملصقات
+        function loadEmojis() {
+            const eList = document.getElementById('emoji-list');
+            const stickers = ["👑", "🔥", "💎", "⚡", "🌟", "🚀", "⚔️", "🛡️"];
+            stickers.forEach(stk => {
+                let s = document.createElement('span');
+                s.className = 'emoji-item pulse';
+                s.style.fontSize = "40px";
+                s.innerText = stk;
+                s.onclick = () => document.getElementById('msg-in').value += stk;
+                eList.appendChild(s);
+            });
+            // تحميل آلاف الإيموجيات
+            for (let i = 0x1F600; i <= 0x1F64F; i++) {
+                let s = document.createElement('span');
+                s.className = 'emoji-item';
+                s.innerText = String.fromCodePoint(i);
+                s.onclick = () => document.getElementById('msg-in').value += s.innerText;
+                eList.appendChild(s);
+            }
+        }
+        loadEmojis();
+
+        // دالة الإرسال والتأثيرات
+        function send() {
+            const inp = document.getElementById('msg-in');
+            const name = document.getElementById('my-name').value;
+            if(inp.value.trim()) {
+                // هنا يتم الربط مع Firebase لإرسال d.effect = "fire_rain"
+                renderMessage({u: name, t: inp.value, effect: "fire_rain", time: new Date().toLocaleTimeString()});
+                triggerEffects();
+                inp.value = "";
+            }
+        }
+
+        function triggerEffects() {
+            document.getElementById('flash-overlay').classList.add('flash-active');
+            document.body.classList.add('shake-active');
+            new Audio('https://www.soundjay.com/nature/thunder-storm-01.mp3').play();
+            makeItRain(); // دالة مطر النار
+            setTimeout(() => {
+                document.getElementById('flash-overlay').classList.remove('flash-active');
+                document.body.classList.remove('shake-active');
+            }, 1000);
+        }
+
+        function renderMessage(d) {
+            const box = document.getElementById('messages');
+            const div = document.createElement('div');
+            div.className = d.u === "علوش" ? 'line royal-carpet' : 'line';
+            const kingBadge = d.u === "علوش" ? "👑 " : "";
+            const nameClass = d.u === "علوش" ? "royal-name" : "";
+            div.innerHTML = `<b class="${nameClass}">${kingBadge}${d.u}:</b> <span>${d.t}</span>`;
+            box.appendChild(div);
+            box.scrollTop = box.scrollHeight;
+        }
+
+        function makeItRain() { /* كود مطر النار المذكور سابقاً */ }
+    </script>
+</body>
+</html>
